--- a/web/css/header.css
+++ b/web/css/header.css
@@ -40,3 +40,10 @@
     background-color: red;
     padding: 10px;
 }
+
+.products {
+    line-height: 1;
+    background: #8B0000 none repeat scroll 0% 0%;
+    width: 50%;
+    height: 210px;
+}
