--- a/web/css/header.css
+++ b/web/css/header.css
@@ -42,4 +42,35 @@
     background: #8B0000 none repeat scroll 0% 0%;
     width: 50%;
     height: 210px;
+    margin: auto;
+    margin-bottom: 30px;
+}
+
+.titlep {
+    display: block;
+    padding: 10px;
+    margin-bottom: 5px;
+    text-align: center;
+    font-size: larger;
+    background-color: #cc4934;
+}
+
+.boxcontentp {
+    display: block;
+    background-color: #a1a1a1;
+    border: 2px solid #1F1F1F;
+    padding: 8px;
+    text-align: justify;
+}
+
+.desc {
+    font-family: sans-serif;
+    margin: 20px 0px 0px 50px;
+}
+
+.reviewlink {
+    position: relative;
+    top: 50px;
+    left: 800px;
+    color: whitesmoke;
 }
